# lab_archives_mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_REVIEW.md  JORS_READY.md  JOSS_READY.md  JOSS_SUBMISSION.md  LICENSE  PHASE1_COMPLETE.md  PR_BODY_0.2.2.md  PR_BODY_SYNC_EXEC.md  QUICKSTART.md  README.md  README_VECTOR_BACKEND.md  RELEASE_COMMANDS.sh  RELEASE_NOTES_0.2.2.md  TDD_PROGRESS.md  WARNINGS_RESOLVED.md  codemeta.json  conda-lock.yml  docker_fix_verification.py  environment.yml  jors_cover_letter.md  jors_metapaper.md  jors_metapaper.org  jors_metapaper.tex  jors_response_to_reviewers.md  josr.cls  paper.bib  paper.md  pyproject.toml  setup_claude.sh  setup_codex.sh  setup_cursor.sh  setup_windsurf.sh  (+2 more)
.beads/: .gitignore  issues.jsonl  last-touched  sync-state.json
.dvc_site_cache/repo/230abadd606912d0396675792d71664d/hashes/local/: cache.db
.dvc_site_cache/repo/230abadd606912d0396675792d71664d/links/: cache.db
.dvc_site_cache/repo/3e88112955626d6a5949703eed6a407d/hashes/local/: cache.db
.dvc_site_cache/repo/3e88112955626d6a5949703eed6a407d/links/: cache.db
.dvc_site_cache/repo/546943517dcca6c220da67e64c325d9f/hashes/local/: cache.db
.dvc_site_cache/repo/546943517dcca6c220da67e64c325d9f/links/: cache.db
.dvc_site_cache/repo/6e8de2e4d0dc645356d52ad645c8ac0a/hashes/local/: cache.db
.dvc_site_cache/repo/6e8de2e4d0dc645356d52ad645c8ac0a/links/: cache.db
.dvc_site_cache/repo/7379bf611c8d3c3e4f224257584ad876/hashes/local/: cache.db
.dvc_site_cache/repo/90406737246e1a77d9a01d2e8df2863b/links/: cache.db
.dvc_site_cache/repo/a2059b6084d2a545b5e47a309d0945bb/links/: cache.db
.dvc_site_cache/repo/c4de31bbc805018cb36aaba4ed480542/links/: cache.db
.dvc_site_cache/repo/c99be24980d258982f48525066d70b40/links/: cache.db
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  WORKFLOW_NOTES.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .gitattributes  ci.yml  deploy.yml  draft-pdf.yml  release.yml  tests.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md  Technical Specifications.md  Technical Specifications_916f36fe-6c43-4713-80b6-8444416b5a59.md
bug_reports/: console_script_entry_bug.md
conf/: secrets.example.yml
conf/vector_search/: default.yaml
data/: .last_indexed
docs/: FUTURE_DIRECTIONS.md  PINECONE_SETUP.md  QUICKSTART.md  agent_configuration.md  api_docs.txt  graph_concepts.md  linked_data.md  onboard_example.json  semantic_governance.md  upload_api.md  vector_approach.md  vector_approach_changelog.md  windsurf_config.json
docs/figures/: architecture.mmd
docs/ns/: context.jsonld
docs/runs/: 20260415-155153-db1d7e41.md  20260421-013136-e06d5687.md
infrastructure/: README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
infrastructure/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
notebooks/: test.ipynb
ns/: context.jsonld
schemas/: onboard.py
scripts/: clear_index.py  diagnose_signature.py  index_labarchives_notebook.py  index_real_notebook.py  mcp_server_wrapper.sh  resolve_uid.py  run_full_tests_with_coverage.sh  search_labarchives.py  setup_pinecone.py  test_baseline.py  test_e2e_workflow.py  verify_claude_config.sh
src/cli/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  __main__.py  auth_manager.py  cli_entry.py  cli_parser.py  config.py  constants.py  exceptions.py  labarchives_api.py  logging_setup.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_fixed.txt  resource_manager.py  setup.py  utils.py  validators.py  version.py
src/cli/api/: __init__.py  client.py  errors.py  models.py  response_parser.py
src/cli/commands/: __init__.py  authenticate.py  config_cmd.py  start.py
src/cli/data_models/: __init__.py  scoping.py
src/cli/examples/: config_examples.sh
src/cli/mcp/: __init__.py  errors.py  handlers.py  models.py  protocol.py  resources.py
src/cli/models/: __init__.py  scoping.py
src/cli/scripts/: build_docker.sh  build_package.sh  install.sh  run_tests.sh
src/cli/security/: sanitizers.py  validators.py
src/cli/tests/: __init__.py  test_auth_manager.py  test_cli_parser.py  test_config.py  test_labarchives_api.py  test_main.py  test_mcp_server.py  test_resource_manager.py  test_scoping.py  test_utils.py
src/cli/tests/fixtures/: __init__.py  api_responses.py  config_samples.py
src/labarchives_mcp/: __init__.py  __main__.py  auth.py  eln_client.py  mcp_server.py  onboard.py  state.py  transform.py
src/labarchives_mcp/linked_data/: __init__.py  provo_export.py
src/labarchives_mcp/models/: upload.py
src/labarchives_mcp/schemas/: onboard.py
src/vector_backend/: __init__.py  build_state.py  chunking.py  config.py  embedding.py  index.py  labarchives_indexer.py  models.py  notebook_indexer.py  sync.py
tests/: conftest.py  test_auth.py  test_baseline_scripts.py  test_cli.py  test_e2e_workflow_scripts.py  test_eln_client.py  test_graph_hardening.py  test_package_structure.py  test_pagination.py  test_release_metadata.py  test_state.py
tests/linked_data/: test_provo_export.py
tests/spec/: test_mcp_server_contract.py  test_mcp_sync_execution.py  test_mcp_sync_tool.py  test_search_page_limit.py  test_upload_specifications.py
tests/test_vector_backend/: __init__.py
tests/test_vector_backend/integration/: test_local_persistence.py  test_pinecone_smoke.py
tests/test_vector_backend/unit/: test_build_state.py  test_chunking.py  test_config.py  test_embedding.py  test_labarchives_indexer.py  test_models.py  test_notebook_indexer.py  test_sync_planning.py
tests/unit/: test_mcp_server.py  test_onboard.py  test_page_reading.py  test_transform.py  test_upload_client.py
(+4 files in other folders)
