[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labarchives-mcp-pol"
version = "0.1.0"
description = "Proof-of-life MCP server for LabArchives ELN."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Samuel Brudner", email = "samuel.brudner@yale.edu" }
]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "loguru>=0.7",
  "hydra-core>=1.3",
  "tenacity>=8.3",
  "omegaconf>=2.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "mypy>=1.9",
  "ruff>=0.5",
  "black>=24.4",
  "isort>=5.13",
  "pre-commit>=3.7"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["labarchives_mcp"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
plugins = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = [
  "error::DeprecationWarning",
  "error::PendingDeprecationWarning"
]
markers = [
  "integration: marks tests that hit external services",
  "slow: marks tests that take longer than expected"
]
